k8s/apps/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    monitoring: prometheus
