k8s/apps/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: apps-deployment
  labels:
    apps: app
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: app
      run: proportional-autoscaler
  template:  
    metadata:
      labels: 
        apps: app
        run: proportional-autoscaler
    spec:
      containers:
        - name: apps
          image: IMAGE_PLACEHOLDER
          ports: 
            - containerPort: 80           
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10          
          resources:
            requests:
              cpu: 1 
              memory: "6Gi"
