k8s/apps/base/externalName-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: RDS_EXTERNALNAME_PLACEHOLDER
