k8s/apps/base/prom-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apps-prom
  labels:
    app: app-monitoring
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 8081
      targetPort: http-metrics
  selector:
    apps: SERVICE_NAME
