k8s/apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-service
spec:
  type: NodePort
  selector:
    apps: app
  ports: 
   - port: 80
     targetPort: 80
